feat: integrate modular dashboard reporting